--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "private": true,
+  "homepage": "https://github.com/kleberwender/NLWJouney2024.git",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -9,8 +10,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "homepage": "https://github.com/kleberwender/NLWJouney2024.git"
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "axios": "^1.7.2",
