--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/kleberwender/NLWJouney2024.git",
+  "homepage": "https://kleberwender.github.io/NLWJouney2024",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
